many little refactorings